Try to fix a compile bug in DotView for Java version < 11